remove extra comments

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
       body {
-        margin-left: 20px; /* adjust the value to your desired margin */
-        margin-right: 20px; /* adjust the value to your desired margin */
+        margin-left: 20px; 
+        margin-right: 20px;
       }
       :root {
         --font-family-sans: 'Noto Sans Mono', monospace;
