Change skills list

--- a/index-russian.html
+++ b/index-russian.html
@@ -82,8 +82,9 @@
         <div>
           <h3>Ключевые навыки</h3>
           <ul>
-            <li>Golang</li>
+            <li>Go</li>
             <li>REST API</li>
+            <li>gRPC</li>
             <li>HTTP</li>
             <li>PostgreSQL</li>
             <li>MySQL</li>
